--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -1,25 +1,28 @@
-<!-- Include header -->
-<%-include('include/_header') %>
-<!-- /Include header -->
 
-<!-- Main site -->
-<main id="site-main">
-  <div class="container">
-    <div class="box-nav d-flex justify-between">
-      <div class="filter">
-        <a href="/"><i class="fas fa-angle-double-left"></i>List</a>
-      </div>
+<!-- include header -->
+<%- include('include/_header') %>
+<!-- /include header -->
+
+  <!-- Main Site -->
+  <main id="site-main">
+    <div class="container">
+        <div class="box-nav d-flex justify-between">
+           <div class="filter">
+               <a href="/"><i class="fas fa-angle-double-left"></i> All Users</a>
+           </div>
+        </div>
+        <div class="form-title text-center">
+            <h2 class="text-dark">New User</h2>
+            <span class="text-light">Register</span>
+        </div>
+
+        <!-- add user form -->
+        <%- include('include/_form') %>
+       
     </div>
-    <div class="form-title text-center">
-      <h2 class="text-dark">New User</h2>
-      <span class="text-light">Register</span>
-    </div>
-    <!-- Form -->
-    <%-include('include/_form') %>
-  </div>
 </main>
-<!-- /Main site -->
+<!-- /Main Site -->
 
-<!-- Include footer -->
-<%-include('include/_footer') %>
-<!-- /Include footer -->
+<!-- include footer -->
+<%- include('include/_footer') %>
+<!-- /include footer -->
