--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -1,19 +1,19 @@
-<!-- Form handling -->
-<form action="/api/users" method="POST" id="add_user">
+ <!-- form handling -->
+ <form action="/api/users" method="POST" id="add_user">
   <div class="new_user">
-    <div class="form-group">
-      <label for="name" class="text-light">Username</label>
-      <input type="hidden" name="id" value="" />
-      <input type="text" name="name" value="" placeholder="John Doe" />
-    </div>
-    <div class="form-group">
-      <label for="rollNo" class="text-light">Roll Number</label>
-      <input type="hidden" name="id" value="" />
-      <input type="text" name="rollNo" value="" placeholder="123456" />
-    </div>
-    <div class="form-group">
-      <button type="submit" class="btn text-dark update">Add</button>
-    </div>
+      <div class="form-group">
+          <label for="name" class="text-light">Name</label>
+          <input type="hidden" name="id" value="">
+          <input type="text" name="name" value="" placeholder="Mark Stoenis">
+      </div>
+      <div class="form-group">
+          <label for="rollNo" class="text-light">Roll Number</label>
+          <input type="text" name="rollNo" value="" placeholder="123456">
+      </div>
+
+      <div class="form-group">
+          <button type="submit" class="btn text-dark update">Save</button>
+      </div>
+
   </div>
 </form>
-<!-- /Form handling -->
