--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Display</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Display</title>
+
+    <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-       <!-- Header -->
-        <header id="header">
-            <nav>
-                <div class="container">
-                    <div class="text-center">
-                        <a href="/" class="'nav-brand text dark">Techkriti</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
-       <!-- /Header -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="header">
+      <nav>
+        <div class="container">
+          <div class="text-center">
+            <a href="/" class="nav-brand text-dark">Techkriti</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- /Header -->
+  </body>
+</html>
